# uft

snap/: snapcraft.yaml
uft/: pyproject.toml
uft/unified_flash/: command.py  err.py  main.py  parser.py  provision_handler.py  tarball_handler.py  wspace.py
uft/universal_flash/: __init__.py  command.py  entry.py  main.py  parser.py  provision_handler.py
